--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
       "git add"
     ]
   },
-
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -38,7 +37,9 @@
       "^.+\\.(js|jsx)$": "babel-jest",
       ".+\\.(css|styl|less|sass|scss)$": "<rootDir>/node_modules/jest-css-modules-transform"
     },
-    "setupFilesAfterEnv": ["<rootDir>/setupTests.js"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
+    ],
     "moduleFileExtensions": [
       "css",
       "scss",
@@ -58,9 +59,10 @@
   "dependencies": {
     "@babel/plugin-transform-react-constant-elements": "7.14.5",
     "@babel/plugin-transform-react-inline-elements": "7.14.5",
+    "antd": "^4.16.8",
+    "babel-plugin-import": "^1.13.1",
     "babel-plugin-transform-react-pure-class-to-function": "1.0.1",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "babel-plugin-import": "^1.13.1",
     "core-js": "3.15.2",
     "lodash": "4.17.21",
     "prop-types": "15.7.2",
@@ -84,7 +86,6 @@
     "@babel/plugin-syntax-import-meta": "7.10.4",
     "@babel/plugin-transform-runtime": "7.14.5",
     "@babel/preset-env": "7.14.8",
-    "babel-preset-react-optimize": "1.0.1",
     "@babel/preset-react": "7.14.5",
     "@babel/register": "7.14.5",
     "@babel/runtime": "7.14.8",
@@ -93,6 +94,7 @@
     "babel-jest": "25.5.1",
     "babel-loader": "8.2.2",
     "babel-plugin-lodash": "3.3.4",
+    "babel-preset-react-optimize": "1.0.1",
     "browserslist": "4.16.6",
     "clean-webpack-plugin": "3.0.0",
     "connect-history-api-fallback": "1.6.0",
@@ -103,17 +105,15 @@
     "eslint": "7.31.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "7.2.0",
-    "eslint-webpack-plugin": "2.5.4",
     "eslint-plugin-import": "2.23.4",
     "eslint-plugin-jest": "23.20.0",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.24.0",
     "eslint-watch": "7.0.0",
+    "eslint-webpack-plugin": "2.5.4",
     "file-loader": "6.2.0",
-    "koa-connect": "2.1.0",
     "html-webpack-plugin": "4.5.2",
-    "script-ext-html-webpack-plugin": "2.1.5",
     "husky": "6.0.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "25.5.4",
@@ -121,19 +121,21 @@
     "jest-enzyme": "7.1.2",
     "jest-fetch-mock": "3.0.3",
     "jsdom": "16.6.0",
+    "koa-connect": "2.1.0",
     "lint-staged": "11.1.0",
     "mini-css-extract-plugin": "0.12.0",
-    "sass": "1.35.2",
     "npm-check-updates": "10.3.1",
+    "optimize-css-assets-webpack-plugin": "6.0.1",
     "prettier": "2.3.2",
     "pretty-quick": "2.0.2",
+    "sass": "1.35.2",
     "sass-loader": "8.0.2",
+    "script-ext-html-webpack-plugin": "2.1.5",
     "style-loader": "1.3.0",
+    "terser-webpack-plugin": "4.2.3",
     "webpack": "4.46.0",
     "webpack-cli": "4.7.2",
     "webpack-dev-server": "3.11.2",
-    "optimize-css-assets-webpack-plugin": "6.0.1",
-    "terser-webpack-plugin": "4.2.3",
     "webpack-merge": "4.2.2"
   }
 }
