--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "babel-plugin-transform-react-pure-class-to-function": "1.0.1",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "core-js": "3.15.2",
+    "less-loader": "^10.0.1",
     "lodash": "4.17.21",
     "prop-types": "15.7.2",
     "react": "16.14.0",
